<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >

    <include
        android:id="@+id/title"
        layout="@layout/layout_header" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_1"
        android:background="@color/color_d6d7dc" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_12"
        android:background="@color/color_f1f1f1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_40"
        android:background="@color/color_fff" >

        <TextView
            android:id="@+id/tv_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_12"
            android:text="@string/str_tel"
            android:textSize="@dimen/text_size_14" />

        <EditText
            android:id="@+id/ed_tel"
            android:layout_width="@dimen/dp_value_170"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_26"
            android:layout_toRightOf="@id/tv_tel"
            android:background="@null"
            android:hint="@string/str_input_tel"
            android:textSize="@dimen/text_size_14" />

        <Button
            android:id="@+id/bt_yanzhengma"
            android:layout_width="@dimen/dp_value_60"
            android:layout_height="@dimen/dp_value_20"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/ed_tel"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_value_13"
            android:background="@drawable/shape_button"
            android:text="@string/str_get_yan"
            
            android:textColor="#fff"
            android:textSize="@dimen/text_size_10" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_12"
        android:background="@color/color_f1f1f1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_40"
        android:background="@color/color_fff" >

        <TextView
            android:id="@+id/tv_yanzhengma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_12"
            android:text="@string/str_yan"
            android:textSize="@dimen/text_size_12" />

        <EditText
            android:id="@+id/ed_yanzhengma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_26"
            android:layout_toRightOf="@id/tv_yanzhengma"
            android:background="@null"
            android:hint="@string/str_input_yan"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_12"
        android:background="@color/color_f1f1f1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_40"
        android:background="@color/color_fff" >

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_12"
            android:text="@string/str_password_register"
            android:textSize="@dimen/text_size_14" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_26"
            android:layout_toRightOf="@id/tv_password"
            android:background="@null"
            android:hint="@string/str_password_hint"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_12"
        android:background="@color/color_f1f1f1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_40"
        android:background="@color/color_fff" >

        <TextView
            android:id="@+id/tv_affirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_12"
            android:text="@string/str_relpassword"
            android:textSize="@dimen/text_size_14" />

        <EditText
            android:id="@+id/ed_affirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_12"
            android:layout_toRightOf="@id/tv_affirm"
            android:background="@null"
            android:hint="@string/str_password_hint"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_12"
        android:background="@color/color_f1f1f1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_40"
        android:background="@color/color_fff" >

        <TextView
            android:id="@+id/tv_referrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_12"
            android:text="@string/str_referrer"
            android:textSize="@dimen/text_size_14" />

        <EditText
            android:id="@+id/ed_referrer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_26"
            android:layout_toRightOf="@id/tv_referrer"
            android:background="@null"
            android:hint="@string/str_referrer_name"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_12"
        android:background="@color/color_f1f1f1" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_40"
        android:layout_marginLeft="@dimen/dp_value_12"
        android:layout_marginRight="@dimen/dp_value_12"
        android:background="@drawable/shape_button"
        android:text="@string/str_register"
        android:textColor="@color/color_fff"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/tv_register_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/dp_value_12"
        android:layout_marginTop="@dimen/dp_value_12"
        android:text="@string/str_have"
        android:textColor="@color/color_e20d11"
        android:textSize="@dimen/text_size_13.5" />

</LinearLayout>