<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@color/btn_bottom_tv_gray"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_take_photo"
            style="@style/txt_camera_pop_menu"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/pop_first_selector"
            android:text="@string/camera_pop_camera"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_choice_photo"
            style="@style/txt_camera_pop_menu"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/pop_last_selector"
            android:text="@string/camera_pop_album"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_choice_cancel"
            style="@style/txt_camera_pop_menu"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/pop_single_selector"
            android:text="@string/camera_pop_cancel"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>