<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >

    <include
        android:id="@+id/title"
        layout="@layout/layout_header" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_1"
        android:background="@color/color_d6d7dc" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_12"
        android:background="@color/color_f1f1f1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_40"
        android:background="@color/color_fff" >

        <TextView
            android:id="@+id/tv_old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_12"
            android:text="@string/str_old_password"
            android:textSize="@dimen/text_size_14" />

        <EditText
            android:id="@+id/ed_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_38"
            android:layout_toRightOf="@id/tv_old"
            android:background="@null"
            android:hint="@string/str_input_yan"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_12"
        android:background="@color/color_f1f1f1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_40"
        android:background="@color/color_fff" >

        <TextView
            android:id="@+id/tv_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_12"
            android:text="@string/str_password_register_re"
            android:textSize="@dimen/text_size_14" />

        <EditText
            android:id="@+id/ed_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_38"
            android:layout_toRightOf="@id/tv_new_password"
            android:background="@null"
            android:hint="@string/str_password_hint"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

        <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_12"
        android:background="@color/color_f1f1f1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_40"
        android:background="@color/color_fff" >

        <TextView
            android:id="@+id/tv_re_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_12"
            android:text="@string/str_password_re_new"
            android:textSize="@dimen/text_size_14" />

        <EditText
            android:id="@+id/ed_re_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_value_26"
            android:layout_toRightOf="@id/tv_re_new_password"
            android:background="@null"
            android:hint="@string/str_password_hint"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_12"
        android:background="@color/color_f1f1f1" />

    <Button
        android:id="@+id/bt_re_yes"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_value_40"
        android:layout_marginLeft="@dimen/dp_value_12"
        android:layout_marginRight="@dimen/dp_value_12"
        android:background="@drawable/shape_button"
        android:text="@string/str_yes"
        android:textColor="@color/color_fff"
        android:textSize="@dimen/text_size_16" />

    

</LinearLayout>